# ms-example

./: Makefile  pyproject.toml
docker/: Dockerfile
