[tool.poetry]
name = "ms-example"
version = "0.1.0"
description = "this is an example for a microservice holding an ML pipeline\""
authors = ["Kaies Lamiri <kaies.lamiri@outlook.com>"]
license = "kaies lamiri bsd license"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
